[gd_scene load_steps=2 format=3 uid="uid://bmy6335wa50mm"]

[ext_resource type="Script" path="res://addons/htn_editor/DomainEditor.gd" id="1_nch6h"]

[node name="PanelContainer" type="PanelContainer"]
offset_left = 2.0
offset_top = 2.0
offset_right = 1917.0
offset_bottom = 1047.0

[node name="DomainEditor" type="HBoxContainer" parent="." node_paths=PackedStringArray("task_buttons", "dir_path_button", "select_prim_dialog", "select_base_path_dialog", "select_domain_builder", "domain_name", "scroll_container")]
layout_mode = 2
script = ExtResource("1_nch6h")
task_buttons = NodePath("VBoxContainer/MarginContainer/ActiveTaskEditor/TaskButtons")
dir_path_button = NodePath("VBoxContainer/HBoxContainer/SelectBasePath")
select_prim_dialog = NodePath("Control/SelectPrimitiveScript")
select_base_path_dialog = NodePath("Control/SelectBaseFolder")
select_domain_builder = NodePath("Control/SelectDomainFile")
domain_name = NodePath("VBoxContainer/HBoxContainer/DomainName")
scroll_container = NodePath("ScrollContainer")

[node name="VBoxContainer" type="VBoxContainer" parent="DomainEditor"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="DomainEditor/VBoxContainer"]
layout_mode = 2

[node name="SelectBasePath" type="Button" parent="DomainEditor/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "SetBasePath"

[node name="DomainName" type="LineEdit" parent="DomainEditor/VBoxContainer/HBoxContainer"]
layout_mode = 2
expand_to_text_length = true

[node name="Label" type="Label" parent="DomainEditor/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = ".htn"

[node name="Save" type="Button" parent="DomainEditor/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Save"

[node name="Load" type="Button" parent="DomainEditor/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Load"

[node name="Compile" type="Button" parent="DomainEditor/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Compile"

[node name="HBoxContainer2" type="HBoxContainer" parent="DomainEditor/VBoxContainer"]
layout_mode = 2

[node name="AddPrim" type="Button" parent="DomainEditor/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "AddPrimitive
"

[node name="AddCompound" type="Button" parent="DomainEditor/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "AddCompound
"

[node name="HBoxContainer3" type="HBoxContainer" parent="DomainEditor/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="DomainEditor/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ActiveTaskEditor" type="ScrollContainer" parent="DomainEditor/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(0, 600)
layout_mode = 2
size_flags_vertical = 3
scroll_vertical_custom_step = 88.065

[node name="TaskButtons" type="VBoxContainer" parent="DomainEditor/VBoxContainer/MarginContainer/ActiveTaskEditor"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="DomainEditor"]
clip_contents = false
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="Control" type="Control" parent="DomainEditor"]
layout_mode = 2

[node name="SelectPrimitiveScript" type="FileDialog" parent="DomainEditor/Control"]
title = "Open a File"
size = Vector2i(662, 527)
ok_button_text = "Open"
file_mode = 0

[node name="SelectBaseFolder" type="FileDialog" parent="DomainEditor/Control"]
title = "Open a Directory"
size = Vector2i(612, 527)
ok_button_text = "Select Current Folder"
file_mode = 2

[node name="SelectDomainFile" type="FileDialog" parent="DomainEditor/Control"]
title = "Open a File"
size = Vector2i(565, 327)
ok_button_text = "Open"
file_mode = 0
filters = PackedStringArray("*.htn")

[connection signal="pressed" from="DomainEditor/VBoxContainer/HBoxContainer/SelectBasePath" to="DomainEditor" method="_on_base_path_pressed"]
[connection signal="text_changed" from="DomainEditor/VBoxContainer/HBoxContainer/DomainName" to="DomainEditor" method="_on_name_changed"]
[connection signal="pressed" from="DomainEditor/VBoxContainer/HBoxContainer/Save" to="DomainEditor" method="_on_save_pressed"]
[connection signal="pressed" from="DomainEditor/VBoxContainer/HBoxContainer/Load" to="DomainEditor" method="_on_load_pressed"]
[connection signal="pressed" from="DomainEditor/VBoxContainer/HBoxContainer/Compile" to="DomainEditor" method="_on_compile_pressed"]
[connection signal="pressed" from="DomainEditor/VBoxContainer/HBoxContainer2/AddPrim" to="DomainEditor" method="_on_add_primitive"]
[connection signal="pressed" from="DomainEditor/VBoxContainer/HBoxContainer2/AddCompound" to="DomainEditor" method="_on_add_compound"]
[connection signal="file_selected" from="DomainEditor/Control/SelectPrimitiveScript" to="DomainEditor" method="_on_primitive_file_selected"]
[connection signal="dir_selected" from="DomainEditor/Control/SelectBaseFolder" to="DomainEditor" method="_on_base_path_dialog_selected"]
[connection signal="file_selected" from="DomainEditor/Control/SelectDomainFile" to="DomainEditor" method="_on_domain_builder_selected"]
